--- a/style.css
+++ b/style.css
@@ -1,12 +1,53 @@
 body{
-    
+   background-color: whitesmoke;
 }
 
 #presentacion{
-    height: 70vh;
+    height: 100vh;
     display: flex;
-    justify-content: start;
     align-items: center;
-    margin-left: 50px;
-    margin-right: 50px;
+   
+}
+
+#proyecto-1{
+    background-image: url('assets/google.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    
+}
+
+.text-shadow-1 {
+    text-shadow: 0 .125rem .35rem rgba(0, 0, 0, .25)
+}
+
+
+.foto{
+    background-image: url("assets/code.png");
+
+}
+
+#linea{
+    opacity: 85%;
+
+}
+    
+#billgates{
+    width: 700px;
+    height: 400px;
+    
+}
+
+.frase{
+    
+    margin-bottom: 50px;
+}
+
+.habilidades{
+    margin-top: 50px;
+}
+
+.width{
+    width: 900px;
+    margin-left: 600px;
 }
